Added sysctl parameters

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,7 @@
 ---
-# defaults file for docker-ce
+
+sysctl:
+  entries:
+    net.ipv6.conf.all.disable_ipv6: 1
+    net.ipv6.conf.default.disable_ipv6: 1
+    vm.swappiness: 5
