--- a/tasks/common/main.yml
+++ b/tasks/common/main.yml
@@ -4,3 +4,11 @@
   selinux:
     policy: targeted
     state: enforcing
+
+- name: Apply kernel parameters
+  sysctl:
+    state: present
+    name: "{{ item.key }}"
+    value: "{{ item.value }}"
+    sysctl_set: true
+  with_dict: "{{ sysctl.entries }}"
