--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,3 +5,7 @@ sysctl:
     net.ipv6.conf.all.disable_ipv6: 1
     net.ipv6.conf.default.disable_ipv6: 1
     vm.swappiness: 5
+
+base_packages:
+  centos:
+    - lvm2
