--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,4 @@
 ---
 
+- include_tasks: "{{ ansible_distribution | lower }}/packages.yml"
 - include_tasks: "common/main.yml"
-- include_tasks: "{{ ansible_distribution | lower }}/main.yml"
