--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,3 +2,4 @@
 
 - include_tasks: "{{ ansible_distribution | lower }}/packages.yml"
 - include_tasks: "common/main.yml"
+- include_tasks: "common/python-packages.yml"
