--- a/tasks/centos/packages.yml
+++ b/tasks/centos/packages.yml
@@ -2,4 +2,6 @@
 
 - name: Install base packages
   yum:
+    state: present
     name: "{{ base_packages[ ansible_distribution | lower ] }}"
+    update_cache: true
