--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,9 @@
 ---
 
-sysctl:
-  entries:
-    net.ipv6.conf.all.disable_ipv6: 1
-    net.ipv6.conf.default.disable_ipv6: 1
-    vm.swappiness: 5
+sysctl_entries:
+  net.ipv6.conf.all.disable_ipv6: 1
+  net.ipv6.conf.default.disable_ipv6: 1
+  vm.swappiness: 5
 
 base_packages:
   centos:
