--- a/tasks/common/main.yml
+++ b/tasks/common/main.yml
@@ -11,4 +11,4 @@
     name: "{{ item.key }}"
     value: "{{ item.value }}"
     sysctl_set: true
-  with_dict: "{{ sysctl.entries }}"
+  with_dict: "{{ sysctl_entries }}"
